<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <!--Header of Login page-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/text_mamceteee"
            android:textColor="@color/app_primary_green"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:letterSpacing="0.02"
            android:text="@string/text_signin_str"
            android:textColor="#fabc"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <!--- Login form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:text="@string/text_email"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:autofillHints="Email"
            android:background="@drawable/button"
            android:hint="@string/placeholder_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="14sp">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:text="@string/text_password"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:autofillHints="Password"
            android:background="@drawable/button"
            android:hint="@string/placeholder_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="14sp">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="35dp"
            android:text="@string/text_forget_password"
            android:textColor="@color/app_primary_green"
            android:textSize="14sp"
            android:textStyle="bold">

        </TextView>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/button"
            android:text="@string/text_login"
            android:textColor="#fff">

        </Button>

        <Button
            android:id="@+id/signup_btn"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:letterSpacing="0.01"
            android:text="@string/text_signup_str"
            android:textAllCaps="false"
            android:textColor="@color/app_primary_green"
            android:textSize="14sp"
            android:textStyle="bold"></Button>

    </LinearLayout>


</LinearLayout>
